--- a/Style.css
+++ b/Style.css
@@ -5,7 +5,17 @@ img
     height: 200px;
     margin: 20px;
     object-fit: cover;
+    border-radius: 50%;
 }
+
 h2{
     font-style: italic;
+}
+p{
+    font-style: oblique;
+}
+
+ul{
+    list-style: circle;
+    font-style: oblique;
 }
