--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 
 img 
 {
@@ -18,4 +22,74 @@ p{
 ul{
     list-style: circle;
     font-style: oblique;
+}
+
+#leah {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(237, 237, 237); 
+}
+
+#leah header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 250px;
+    background-image: url("https://www.plu.edu/computer-science/wp-content/uploads/sites/551/2020/03/datascience-1024x396-1.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 250px;
+    /* background-size: cover; */
+}
+
+#leah #headshot {
+    width: 200px;
+    border-radius: 0;
+}
+
+#leah h1 {
+    height: 40px;
+    margin: 20px 0;
+    border-bottom: 3px solid rgb(247, 149, 120);
+}
+
+#leah section {
+    width: 75%;
+    height: calc(100vh - 350px);
+    background-color: rgb(220, 220, 220);
+    border: 1px solid rgb(180, 180, 180);
+    display: flex;
+    justify-content: center;
+}
+
+#leah .section-div {
+    width: 50%;
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#leah #left-div {
+    border-right: 1px solid rgb(180, 180, 180);
+}
+
+#leah h2, p {
+    font-style: normal;
+}
+
+#leah h2 {
+    width: 150px;
+    text-align: center;
+    border-bottom: 3px dotted rgb(47, 157, 164);
+    margin-bottom: 10px;
+}
+
+#leah th, td {
+    border: 1px solid rgb(180, 180, 180);
+    padding: 5px;
 }
