--- a/css/koy_style.css
+++ b/css/koy_style.css
@@ -6,7 +6,8 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 400px;
+    height: 400px;
 }
 
 h4 {
