Created routes for GET and POST requests

--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -46,7 +46,7 @@ ul{
     align-items: center;
     width: 100%;
     height: 250px;
-    background-image: url("https://www.plu.edu/computer-science/wp-content/uploads/sites/551/2020/03/datascience-1024x396-1.jpg");
+    background-image: url("../images/leah-header.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 250px;
